[package]
name = "mini-posts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

# build: cargo build --target wasm32-unknown-unknown --release
# deploy: near deploy --wasmFile target/wasm32-unknown-unknown/release/mini_posts.wasm --accountId <YourAccount.testnet>
# test: cargo test --package mini-posts -- --nocapture
